# DASMatrix

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRD.md  README.md  README_cn.md  debug_xarray.py  justfile  main.py  mkdocs.yml  pyproject.toml  ty_report.txt
.agent/skills/code-simplifier/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
DASMatrix/: __init__.py  examples.py  units.py
DASMatrix/acquisition/: __init__.py  das_reader.py
DASMatrix/acquisition/formats/: __init__.py  apsensing.py  base.py  dat.py  febus.py  h5.py  miniseed.py  netcdf.py  prodml.py  segy.py  silixa.py  tdms.py  terra15.py  zarr_format.py
DASMatrix/agent/: __init__.py  session.py  tools.py
DASMatrix/agent/features/: cleaning.py
DASMatrix/agent/schemas/: __init__.py  anthropic.py  openai.py
DASMatrix/analysis/: event_detection.py  template_matching.py
DASMatrix/api/: __init__.py  dasframe.py  dasframe_plot.py  dasframe_units.py  df.py  spool.py  stream.py
DASMatrix/config/: __init__.py  sampling_config.py  visualization_config.py
DASMatrix/core/: __init__.py  computation_graph.py  event.py  inventory.py  ring_buffer.py
DASMatrix/ml/: __init__.py  exporter.py  model.py  pipeline.py
DASMatrix/processing/: atoms.py  das_processor.py  engine.py
DASMatrix/processing/backends/: numba_backend.py  polars_backend.py
DASMatrix/processing/planner/: optimizer.py
DASMatrix/utils/: __init__.py  time.py
DASMatrix/visualization/: __init__.py  das_visualizer.py  dashboard.py  plot_base.py  plot_profiles.py  plot_signals.py  realtime.py  styles.py
DASMatrix/visualization/web/: server.py  web_dashboard.py
DASMatrix/visualization/web/static/: index.html
docs/: contributing.md  index.md  lfm_optimization_and_cpp.md  lfm_power_estimation.md  quickstart.md
docs/api/: computation_graph.md  dasframe.md  index.md  processing.md  reader.md  visualization.md
examples/: agent_demo.py  ai_framework_verify.py  benchmark_engine.py  calibration.py  calibration_spectral.py  cleaning_agent_demo.py  fk_filter_demo.py  inventory_demo.py  quick_start.py  realtime_dashboard.py  realtime_monitoring.py  spool_persistence_demo.py  stft_fk_test.py  stft_spectrogram.py  template_matching_demo.py  visualization_demo.py
nb/: DASMatrix_Tutorial.ipynb
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
scripts/: gen_ref_pages.py  update_tutorial.py
site/: 404.html  index.html  objects.inv
site/SUMMARY/: index.html
site/api/: index.html
site/api/computation_graph/: index.html
site/api/dasframe/: index.html
site/api/processing/: index.html
site/api/reader/: index.html
site/api/visualization/: index.html
site/contributing/: index.html
site/quickstart/: index.html
site/reference/DASMatrix/: index.html
site/reference/DASMatrix/acquisition/: index.html
site/reference/DASMatrix/acquisition/das_reader/: index.html
site/reference/DASMatrix/api/: index.html
site/reference/DASMatrix/api/dasframe/: index.html
site/reference/DASMatrix/api/df/: index.html
site/reference/DASMatrix/config/: index.html
site/reference/DASMatrix/config/sampling_config/: index.html
site/reference/DASMatrix/config/visualization_config/: index.html
site/reference/DASMatrix/core/: index.html
site/reference/DASMatrix/core/computation_graph/: index.html
site/reference/DASMatrix/processing/: index.html
site/reference/DASMatrix/processing/backends/: index.html
site/reference/DASMatrix/processing/backends/numba_backend/: index.html
site/reference/DASMatrix/processing/backends/polars_backend/: index.html
site/reference/DASMatrix/processing/das_processor/: index.html
site/reference/DASMatrix/processing/engine/: index.html
site/reference/DASMatrix/processing/kernels/: index.html
site/reference/DASMatrix/processing/kernels/cpu/: index.html
site/reference/DASMatrix/processing/kernels/gpu/: index.html
site/reference/DASMatrix/processing/planner/: index.html
site/reference/DASMatrix/processing/planner/optimizer/: index.html
site/reference/DASMatrix/visualization/: index.html
site/reference/DASMatrix/visualization/das_visualizer/: index.html
site/reference/DASMatrix/visualization/styles/: index.html
site/search/: search_index.json
tests/: __init__.py  verify_plot_rms.py
tests/performance/: benchmark_large_scale.py  conftest.py  test_throughput.py
tests/unit/: test_accuracy.py  test_agent_schemas.py  test_analysis.py  test_api_exports.py  test_atoms.py  test_computation_graph.py  test_dasframe.py  test_dashboard.py  test_deprecations.py  test_event_system.py  test_examples.py  test_fk_processing.py  test_format_registry.py  test_hybrid_engine.py  test_inventory.py  test_inventory_integration.py  test_numba_backend.py  test_numba_bandpass.py  test_package_surface.py  test_polars_backend.py  test_readers_advanced.py  test_readers_lazy.py  test_ring_buffer.py  test_spool.py  test_spool_concat.py  test_spool_units.py  test_stream.py  test_template_matching.py  test_time_utils.py  test_units.py  test_visualization.py  test_web_server.py  test_web_static_assets.py
