[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasmatrix"
version = "0.1.0"
authors = [
    {name = "QLong Wang", email = "wql1994513@gmail.com"},
]
description = "分布式声学传感数据处理与分析框架"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.11.0",
    "matplotlib>=3.7.5",
    "pywavelets>=1.4.1",
    "scipy>=1.10.1",
]

[tool.setuptools]
packages = ["DASMatrix", "DASMatrix.acquisition", "DASMatrix.config", "DASMatrix.processing", "DASMatrix.visualization"]

[tool.ruff]
line-length = 88 # 示例配置

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings, I=isort

[tool.ruff.format]
quote-style = "double"
