[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasmatrix"
version = "0.1.0"
authors = [{ name = "QLong Wang", email = "wql1994513@gmail.com" }]
description = "分布式声学传感数据处理与分析框架"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.11.0",
    "matplotlib>=3.7.5",
    "pywavelets>=1.4.1",
    "scipy>=1.10.1",
    "polars>=0.20.0",
    "numba>=0.59.0",
    "zarr>=2.16.0",
    "pyarrow>=15.0.0",
    "pytest>=7.0.0",
    "ty>=0.0.5",
    "obspy>=1.4.2",
    "seaborn>=0.13.2",
    "xarray>=2024.7.0",
    "dask>=2024.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
]

[tool.setuptools]
packages = [
    "DASMatrix",
    "DASMatrix.acquisition",
    "DASMatrix.config",
    "DASMatrix.processing",
    "DASMatrix.visualization",
]

[tool.ruff]
line-length = 88 # 示例配置

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
] # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings, I=isort

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]  # 允许 examples 中 import 前有配置代码

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings-python>=1.8.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "ruff>=0.1.0",
    "pre-commit>=4.3.0",
]

[tool.mypy]
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "numba.*",
    "h5py.*",
    "seaborn.*",
    "mpl_toolkits.*",
    "pyarrow.*",
]
ignore_missing_imports = true
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Glyph.*missing from font.*:UserWarning",
    "ignore:.*Glyph.*missing from current font.*:UserWarning",
]
