[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasmatrix"
version = "0.1.0"
authors = [{ name = "QLong Wang", email = "wql1994513@gmail.com" }]
description = "分布式声学传感数据处理与分析框架"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.11.0",
    "matplotlib>=3.7.5",
    "pywavelets>=1.4.1",
    "scipy>=1.10.1",
    "polars>=0.20.0",
    "numba>=0.59.0",
    "zarr>=2.16.0",
    "pyarrow>=15.0.0",
    "pytest>=7.0.0",
    "ty>=0.0.5",
    "obspy>=1.4.2",
    "seaborn>=0.13.2",
    "xarray>=2024.7.0",
    "dask>=2024.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.5",
    "pint>=0.23",
    "pydantic>=2.12.5",
    "torch>=2.0.0",
    "onnxruntime>=1.15.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["DASMatrix*"]

[tool.setuptools.package-data]
"DASMatrix.visualization" = ["web/static/*"]

[tool.ruff]
line-length = 120 # 示例配置

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "I",
] # E=pycodestyle errors, F=pyflakes, W=pycodestyle warnings, I=isort

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"] # 允许 examples 中 import 前有配置代码

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings-python>=1.8.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "ruff>=0.1.0",
    "pre-commit>=4.3.0",
    "pytest-benchmark>=5.2.3",
]

[tool.mypy]
# 核心设置：保持基本严谨
no_implicit_optional = true
check_untyped_defs = true

# 渐进式检查：放宽开发阶段的限制，避免过度干扰
disallow_untyped_defs = false    # 允许不标注函数返回类型
warn_return_any = false         # 允许返回 Any 类型，减少琐碎报错
ignore_missing_imports = true   # 全局忽略缺失的第三方库类型存根

# 排除不需要检查的目录
exclude = ["venv", ".venv", "tests/"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "numba.*",
    "h5py.*",
    "seaborn.*",
    "mpl_toolkits.*",
    "pyarrow.*",
]
ignore_missing_imports = true
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Glyph.*missing from font.*:UserWarning",
    "ignore:.*Glyph.*missing from current font.*:UserWarning",
]
